...

              // Primary button "LET'S GO!"
              Semantics(
                button: true,
                label: 'Let\'s go button. Tap to start meeting your Buddy',
                child: OnboardingButton(
                  label: 'LET\'S GO!',
                  onPressed: () {
                    Navigator.pushNamed(context, '/buddy-intro');
                  },
                  isPrimary: true,
                ),
              ),
...
